--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,3 +1,7 @@
+ul.icons {
+    margin: auto;
+}
+
 ul.icons li {
     display: inline-block;
     height: 2.5em;
@@ -5,18 +9,23 @@ ul.icons li {
     padding: 0 0.5em;
 }
 
-footer {
+.footer-content {
+    width: 100%;
     text-align: center;
     background-color: #5F7793;
-    position: absolute;
+    position: relative;
     bottom: 0;
-    width: 100%;
-    height: 5rem;
+    
+    margin: auto;
+    padding: 20px;
+    flex-wrap: wrap;
+    overflow:auto;
 }
 
 .page-wrap {
     position: relative;
-    min-height: 100vh;
+    min-height: 100%;
+    overflow:auto;
 }
 
 .navbar {
@@ -29,7 +38,6 @@ footer {
 
 .container {
     background-color: #95cded;
-    padding-bottom: 5rem;
 }
 
 .icon {
@@ -42,4 +50,9 @@ footer {
 
 h1 {
     text-align: center;
+}
+
+img {
+    max-width: 100%;
+    max-height: 100%;
 }
